--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ MONGODB_HOST=cluster0.dvxschv.mongodb.net
 MONGODB_DB=coopgenix
 NODE_ENV=prod
 PORT=8080
-RPC_URL = https://polygon-rpc.com
+RPC_URL = https://polygon-bor-rpc.publicnode.com
 # RPC_URL = https://opbnb-testnet-rpc.bnbchain.org
 MAIN_CONTRACT=0x530EF32e9A7E0663cFc86989e6Df7585DD40dd97
 # old contract=0x439f55aeBFf151B0380adeA1997FF2D26Fe267A0
